luci-theme-openwrt: prevent minify errors
The CSS:

	padding: calc(0.125em - 1px) calc(0.5em - 1px);

produced:

	padding:calc(.125em

since minify treated it as a quad. Work around this and remove
it. The difference without it is minor.

Remove input colouring since the custom tags don't help and
the colouring makes input difficult to discern from placeholders.

Remove also -ms-backdrop definition which effectively overrides
the previous auto.

There was also an instance where 'solid red;' was truncated
to 'solid re' but I cannot reproduce this with minify.

(cherry picked from commit 5a36477c953e9028ddf587135f014b6adbb0684c)

--- a/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
+++ b/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
@@ -415,7 +415,7 @@ div.hostinfo {
 	border: 1px solid #90c0e0;
 	background: #000 !important;
 	color: #90c0e0 !important;
-	padding: calc(.125em - 1px) calc(.5em - 1px);
+	/*padding: calc(.125em - 1px) calc(.5em - 1px);*/
 }
 
 html #menubar a:link,
@@ -576,18 +576,6 @@ p {
 ul.cbi-apply {
 	font-size: 90%;
 }
-
-/*input:-webkit-input-placeholder {
-	color: #AAAAAA;
-}*/
-
-input:-moz-placeholder {
-	color: #AAAAAA;
-}
-
-/*input:-ms-input-placeholder {
-	color: #AAAAAA;
-}*/
 
 input[type=submit],
 input[type=reset],
@@ -975,13 +963,6 @@ div.cbi-optionals {
 .cbi-page-actions > .cbi-button-apply,
 .cbi-page-actions > form[method="post"] {
 	margin-left: auto;
-}
-
-/**::-ms-backdrop,*/
-.cbi-page-actions > .cbi-button-save,
-.cbi-page-actions > .cbi-button-apply,
-.cbi-page-actions > form[method="post"] {
-	margin-left: 50%;
 }
 
 .cbi-page-actions > .cbi-button-apply + .cbi-button-save,
@@ -1376,7 +1357,7 @@ ul.cbi-tabmenu li.cbi-tab-disabled[data-errors]::after {
 
 /* indication line for drag-and-drop in UIDynamicList*/
 .cbi-dynlist > .item.drag-over {
-	border-top: 1px solid red;
+	border-top: 1px red;
 }
 
 /* Make item being dragged in UIDynamicList partially transparent*/
@@ -1395,7 +1376,7 @@ ul.cbi-tabmenu li.cbi-tab-disabled[data-errors]::after {
 
 /* indication line for drag-and-drop in UIDynamicList*/
 .cbi-dynlist > .add-item > .cbi-button-add.drag-over {
-	border-top: 1px solid red;
+	border-top: 1px red;
 }
 
 .cbi-dynlist > .add-item > input {
